cluster-services/traefik-ingress/ingressroute-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-v2

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.germanium.home`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
